# extract-hspec-tests

./: LICENSE  README.md  extract-hspec-tests.cabal  stack-lts-12.yaml
src/Test/: ExtractHspecTests.hs
